fix scrollbars

--- a/csfieldguide/static/interactives/mips-assembler/css/mips-assembler.css
+++ b/csfieldguide/static/interactives/mips-assembler/css/mips-assembler.css
@@ -7,8 +7,9 @@
   padding: 0.3rem !important;
   overflow: auto;
   width: 100%;
+  max-height: 480px;
 }
-textarea.code{
+textarea.code {
   height: 30rem;
 }
 .footer {
