--- a/csfieldguide/static/interactives/mips-simulator/css/mips-simulator.css
+++ b/csfieldguide/static/interactives/mips-simulator/css/mips-simulator.css
@@ -7,12 +7,10 @@
   padding: 0.3rem !important;
   overflow: auto;
   width: 100%;
+  max-height: 480px;
 }
 textarea.code {
   height: 30rem;
-}
-textarea.code#mips_keyInput {
-  height: 5rem;
 }
 .footer {
   padding: 1rem;
